--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -9,13 +9,11 @@ on:
   schedule:
     - cron: '0 20 * * *' # 每天UTC时间20点，即北京时间4点
 env:
-  IMAGE_PUSH: 'true'
-
+  IMAGE_NAME: ${{ github.event.inputs.image_name || 'openlist-base-image' }}
+  RELEASE_PLATFORMS: 'linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/arm/v6,linux/s390x,linux/ppc64le,linux/riscv64'
 jobs:
   build-base-image:
     name: Release Docker image
-    env:
-      IMAGE_NAME: ${{ github.event.inputs.image_name || 'openlist-base-image' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -52,7 +50,6 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
-        if: env.IMAGE_PUSH == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -67,17 +64,13 @@ jobs:
             ${{ github.event_name == 'workflow_dispatch'
                 && format('type=raw,value={0}', github.event.inputs.manual_tag)
               || format('type=raw,value={0}', github.ref_name) }}
-          flavor: |
-            latest=${{ github.event_name == 'push' || github.event.inputs.as_latest == 'true' }}
-            ${{ matrix.tag_favor }}
-
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v6
         with:
           context: ./base
           file: base/Dockerfile
-          push: ${{ env.IMAGE_PUSH == 'true' }}
+          push: true
           build-args: ${{ matrix.build_arg }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
