--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -23,18 +23,22 @@ jobs:
             build_arg: |
               INSTALL_FFMPEG=false
               INSTALL_ARIA2=false
+            tag_favor: "single"
           - image: "ffmpeg"
             build_arg: |
               INSTALL_FFMPEG=true
               INSTALL_ARIA2=false
+            tag_favor: "suffix=-ffmpeg,onlatest=true"
           - image: "aria2"
             build_arg: |
               INSTALL_FFMPEG=false
               INSTALL_ARIA2=true
+            tag_favor: "suffix=-aria2,onlatest=true"
           - image: "aio"
             build_arg: |
               INSTALL_FFMPEG=true
               INSTALL_ARIA2=true
+            tag_favor: "suffix=-aio,onlatest=true"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
