--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -10,69 +10,43 @@ on:
     - cron: '0 20 * * *' # 每天UTC时间20点，即北京时间4点
 env:
   IMAGE_NAME: ${{ github.event.inputs.image_name || 'openlist-base-image' }}
-  RELEASE_PLATFORMS: 'linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/arm/v6,linux/s390x,linux/ppc64le,linux/riscv64'
 jobs:
   build-base-image:
     name: Release Docker image
     runs-on: ubuntu-latest
+    # 根据`env.RRELEASE_PLATFORMS`多架构支持，且根据`env.RELEASE_TAG`标签构建
     strategy:
       matrix:
-        image: ["single","ffmpeg", "aria2", "aio"]
-        include:
-          - image: "single"
-            build_arg: |
-              INSTALL_FFMPEG=false
-              INSTALL_ARIA2=false
-            tag_favor: "single"
-          - image: "ffmpeg"
-            build_arg: |
-              INSTALL_FFMPEG=true
-              INSTALL_ARIA2=false
-            tag_favor: "suffix=-ffmpeg,onlatest=true"
-          - image: "aria2"
-            build_arg: |
-              INSTALL_FFMPEG=false
-              INSTALL_ARIA2=true
-            tag_favor: "suffix=-aria2,onlatest=true"
-          - image: "aio"
-            build_arg: |
-              INSTALL_FFMPEG=true
-              INSTALL_ARIA2=true
-            tag_favor: "suffix=-aio,onlatest=true"
+        platform: [linux/amd64, linux/arm64, linux/arm/v7, linux/386, linux/arm/v6, linux/s390x, linux/ppc64le, linux/riscv64]
+        tag: [aio, ffmpeg, aria2, base]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - name: Checkout code
+        uses: actions/checkout@v3 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to DockerHub Container Registry
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
-          tags: >
-            ${{ github.event_name == 'workflow_dispatch'
-                && format('type=raw,value={0}', github.event.inputs.manual_tag)
-              || format('type=raw,value={0}', github.ref_name) }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v6
+      # 如果tag为`aio`，则构建参数为 `--build-arg INSTALL_FFMPEG=true --build-arg INSTALL_ARIA2=true`
+      # 如果tag为`ffmpeg`，则构建参数为 `--build-arg INSTALL_FFMPEG=true`
+      # 如果tag为`aria2`，则构建参数为 `--build-arg INSTALL_ARIA2=true`
+      # 如果tag为`base`，则不需要任何构建参数
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
         with:
           context: ./base
-          file: base/Dockerfile
+          platforms: ${{ matrix.platform }}
           push: true
-          build-args: ${{ matrix.build_arg }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: ${{ env.RELEASE_PLATFORMS }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ matrix.tag }}
+            ${{ env.IMAGE_NAME }}:${{ matrix.platform }}-${{ matrix.tag }}
+          build-args: |
+            TARGETPLATFORM=${{ matrix.platform }}
+            RELEASE_TAG=${{ matrix.tag }}
+            INSTALL_FFMPEG=${{ matrix.tag == 'ffmpeg' || matrix.tag == 'aio' }}
+            INSTALL_ARIA2=${{ matrix.tag == 'aria2' || matrix.tag == 'aio' }}
+      
