--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -17,7 +17,7 @@ jobs:
     # 根据`env.RRELEASE_PLATFORMS`多架构支持，且根据`env.RELEASE_TAG`标签构建
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64, linux/arm/v7, linux/386, linux/arm/v6, linux/s390x, linux/ppc64le, linux/riscv64]
+        platform: [linux/amd64, linux/arm64, linux/arm/v7]
         tag: [aio, ffmpeg, aria2, base]
     steps:
       - name: Checkout code
