--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Prepare
         run: |
-          platform=${{ matrix.platform }}
+          platform=${{ matrix.RELEASE_PLATFORM }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
