fix(ci):Improve Docker build workflow with better error handling and build summaries
- Add timeout limits and max parallel builds for better resource management
- Implement digest validation before manifest merging to prevent failures
- Add build summaries with status indicators for better visibility
- Update action versions and add network host driver option for buildx
- Enable no-cache and pull options for more reliable builds
- Add conditional execution for merge job to handle partial build failures

--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -15,37 +15,48 @@ env:
   GHCR_REGISTRY: ghcr.io
 jobs:
   build-base-image:
-    name: Release Docker image
+    name: Build ${{ matrix.tag }} for ${{ matrix.RELEASE_PLATFORM }}
     permissions:
       packages: write
+      contents: read
     runs-on: ubuntu-latest
-    # 根据`env.RELEASE_PLATFORMS`多架构支持，且根据`env.RELEASE_TAG`标签构建
+    timeout-minutes: 120
     strategy:
+      max-parallel: 8
       matrix:
         tag: [aio, ffmpeg, aria2, base]
         RELEASE_PLATFORM: ['linux/amd64', 'linux/arm64', 'linux/arm/v7', 'linux/386', 'linux/arm/v6', 'linux/ppc64le', 'linux/riscv64', 'linux/loong64'] #linux/s390x
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 
+        uses: actions/checkout@v4
+        
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            network=host
+            
       - name: Prepare
         run: |
           platform=${{ matrix.RELEASE_PLATFORM }}
           echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+          
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHCR_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Login to DockerHub Container Registry
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       # 如果tag为`aio`，则构建参数为 `--build-arg INSTALL_FFMPEG=true --build-arg INSTALL_ARIA2=true`
       # 如果tag为`ffmpeg`，则构建参数为 `--build-arg INSTALL_FFMPEG=true`
       # 如果tag为`aria2`，则构建参数为 `--build-arg INSTALL_ARIA2=true`
@@ -58,6 +69,8 @@ jobs:
           file: ${{ matrix.RELEASE_PLATFORM == 'linux/loong64' && './base/Dockerfile.loong64' || './base/Dockerfile' }}
           platforms: ${{ matrix.RELEASE_PLATFORM }}
           push: true
+          pull: true
+          no-cache: true
           tags: |
             ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}
             ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
@@ -67,11 +80,13 @@ jobs:
             INSTALL_ARIA2=${{ matrix.tag == 'aria2' || matrix.tag == 'aio' }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+          
       - name: Export digest
         run: |
           mkdir -p ${{ runner.temp }}/digests-${{ matrix.tag }}
           digest="${{ steps.build.outputs.digest }}"
           touch "${{ runner.temp }}/digests-${{ matrix.tag }}/${digest#sha256:}"
+          
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -79,13 +94,26 @@ jobs:
           path: ${{ runner.temp }}/digests-${{ matrix.tag }}/*
           if-no-files-found: error
           retention-days: 1
+          
+      - name: Build summary
+        if: always()
+        run: |
+          if [[ "${{ steps.build.outcome }}" == "success" ]]; then
+            echo "✅ Successfully built ${{ matrix.tag }} for ${{ matrix.RELEASE_PLATFORM }}" >> $GITHUB_STEP_SUMMARY
+            echo "📦 Image digest: ${{ steps.build.outputs.digest }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ Failed to build ${{ matrix.tag }} for ${{ matrix.RELEASE_PLATFORM }}" >> $GITHUB_STEP_SUMMARY
+          fi
   merge:
+    name: Merge ${{ matrix.tag }} manifests
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     strategy:
       matrix:
         tag: [aio, ffmpeg, aria2, base]
     needs:
       - build-base-image
+    if: always() && needs.build-base-image.result != 'cancelled'
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
@@ -93,20 +121,40 @@ jobs:
           path: ${{ runner.temp }}/digests-${{ matrix.tag }}
           pattern: digests-${{ matrix.tag }}-*
           merge-multiple: true
+          
+      - name: Check if digests exist
+        id: check_digests
+        run: |
+          if [ -d "${{ runner.temp }}/digests-${{ matrix.tag }}" ] && [ "$(ls -A ${{ runner.temp }}/digests-${{ matrix.tag }})" ]; then
+            echo "has_digests=true" >> $GITHUB_OUTPUT
+            echo "Found digests for ${{ matrix.tag }}"
+            ls -la ${{ runner.temp }}/digests-${{ matrix.tag }}
+          else
+            echo "has_digests=false" >> $GITHUB_OUTPUT
+            echo "No digests found for ${{ matrix.tag }}, skipping merge"
+          fi
+          
       - name: Login to GitHub Container Registry
+        if: steps.check_digests.outputs.has_digests == 'true'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHCR_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Login to DockerHub Container Registry
+        if: steps.check_digests.outputs.has_digests == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Set up Docker Buildx
+        if: steps.check_digests.outputs.has_digests == 'true'
         uses: docker/setup-buildx-action@v3
+        
       - name: Docker meta
+        if: steps.check_digests.outputs.has_digests == 'true'
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -115,14 +163,34 @@ jobs:
              ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{ matrix.tag }}
+            
       - name: Create manifest list and push
+        if: steps.check_digests.outputs.has_digests == 'true'
         working-directory: ${{ runner.temp }}/digests-${{ matrix.tag }}
         run: |
+          # Create manifest for DockerHub
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+          
+          # Create manifest for GHCR
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}@sha256:%s ' *)
+            
       - name: Inspect image
+        if: steps.check_digests.outputs.has_digests == 'true'
         run: |
+          echo "🔍 Inspecting DockerHub image..."
           docker buildx imagetools inspect ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          echo "🔍 Inspecting GHCR image..."
           docker buildx imagetools inspect ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          
+      - name: Merge summary
+        if: always()
+        run: |
+          if [[ "${{ steps.check_digests.outputs.has_digests }}" == "true" ]]; then
+            echo "✅ Successfully merged manifests for ${{ matrix.tag }}" >> $GITHUB_STEP_SUMMARY
+            echo "🐳 DockerHub: ${{ env.DOCKERHUB_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.tag }}" >> $GITHUB_STEP_SUMMARY
+            echo "📦 GHCR: ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_ORG_NAME }}/${{ env.IMAGE_NAME }}:${{ matrix.tag }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⏭️ Skipped merging manifests for ${{ matrix.tag }} (no digests found)" >> $GITHUB_STEP_SUMMARY
+          fi
